# fireatlas

./: .coveragerc  .gitignore  .gitlab-ci.yml  .nojekyll  02_Run.ipynb  03_Output.ipynb  05_Experiments.ipynb  11_Archive.ipynb  12_One_Year_Region_t.ipynb  13_One_Year_Fire_Forward.ipynb  Archive.ipynb  Benchmark_tests.py  CodeDebug.ipynb  CodeDebug.ipynb.bk  DataCheckUpdate.py  Dockerfile  Dockerfile.maap  FireClustering.py  FireConsts.py  FireDPSCoordinator.py  FireEnums.py  FireFuncs.py  FireGdf.py  FireGdf_final.py  FireGdf_ign.py  FireGdf_merge.py  FireGdf_sfs.py  FireGdf_sfs_merge.py  FireGpkg.py  FireGpkg_sfs.py  FireIO.py  FireLog.py  FireMain.py  FireObj.py  FireRun.py  FireRunByRegion.py  FireRunByRegionAndT.py  FireRunDPSCoordinator.py  FireRunDaskCoordinator.py  FireRunDataUpdateChecker.py  (+63 more)
.ipynb_checkpoints/: CodeDebug-checkpoint.ipynb  Readme-checkpoint.txt
docs/: algorithm_explanation.html  algorithm_explanation.md  api.html  api.qmd  contributing.html  contributing.qmd  custom_regions.html  custom_regions.qmd  data_overview.html  data_overview.qmd  fireatlas_core.html  fireatlas_core.qmd  firms.html  firms.qmd  getting_started.html  getting_started.md  index.html  index.md  index.qmd  new_region.html  new_region.qmd  notebooks.html  notebooks.md  nrt.html  nrt.qmd  old_index.html  old_index.md  playbook_dps_debug.html  playbook_dps_debug.md  regions.html  regions.qmd  releasing.html  releasing.md  releasing.qmd  running_tests.html  running_tests.md  schedule_custom_regions.md  system_architecture.html  system_architecture.qmd
fireatlas/: DataCheckUpdate.py  FireClustering.py  FireConsts.py  FireEnums.py  FireFuncs.py  FireGpkg.py  FireGpkg_sfs.py  FireIO.py  FireLog.py  FireLog_class.py  FireLog_function.py  FireMain.py  (+11 more)
(+270 files in other folders)
